# pixelmatch-fast

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  pypi-publish.yml
hooks/: pre-commit
src/pixelmatch/: __init__.py
tests/: test_compare.py
